--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <nav>
         <ul>
-            <li></li>
-            <li></li>
+            <li>Institucional</li>
+            <li>Cotizaciones</li>
             <li>Noticias</li>
             <li>Contacto</li>
         </ul>
