--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <nav>
-        <ul>
-            <li>Institucional</li>
-            <li>Cotizaciones</li>
-            <li>Noticias</li>
-            <li>Contacto</li>
+        <ul class="nav_links">
+            <li class="nav_item"><a href="#" class="nav_link">Institucional</a></li>
+            <li class="nav_item"><a href="#" class="nav_link"></a>>Cotizaciones</a></li>
+            <li class="nav_item"><a href="#" class="nav_link"></a>>Noticias</a></li>
+            <li class="nav_item"><a href="#" class="nav_link"></a>>Contacto</a></li>
         </ul>
 
     </nav>
@@ -22,8 +22,10 @@
         <div id="contenedor">
             <div id="banner">
                 <div id="logo"></div>
-                <div id="titulo"><h1>ISPI 4038</h1>
-                <h3>Instituto Superior Particular Incorporado N°4038 Juan Pablo II</h3></div>
+                <div id="titulo">
+                    <h1>ISPI 4038</h1>
+                    <h3>Instituto Superior Particular Incorporado N°4038 Juan Pablo II</h3>
+                </div>
                 <div id="boton_info"><button>mas información</button></div>
             </div>
             <div id="informacion"></div>
