--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav>
         <ul class="nav_links">
             <li class="nav_item"><a href="#" class="nav_link">Institucional</a></li>
-            <li class="nav_item"><a href="#" class="nav_link"></a>>Cotizaciones</a></li>
-            <li class="nav_item"><a href="#" class="nav_link"></a>>Noticias</a></li>
-            <li class="nav_item"><a href="#" class="nav_link"></a>>Contacto</a></li>
+            <li class="nav_item"><a href="#" class="nav_link">Cotizaciones</a></li>
+            <li class="nav_item"><a href="#" class="nav_link">Noticias</a></li>
+            <li class="nav_item"><a href="#" class="nav_link">Contacto</a></li>
         </ul>
 
     </nav>
