--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <h1>ISPI 4038</h1>
                     <h3>Instituto Superior Particular Incorporado N°4038 Juan Pablo II</h3>
                 </div>
-                <div id="boton_info"><button>mas información</button></div>
+                <div id="boton_info"><button>Más información</button></div>
             </div>
             <div id="informacion"></div>
             <div id="cotizacion_noticias"></div>
