--- a/index.html
+++ b/index.html
@@ -1,62 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ISPI</title>
+    <title>ISPI 4038 - Juan Pablo II</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/index.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
     <header class="cabecera">
-        <nav class="nav_contenedor" id="nav">
-            <h2 class="nav_logo">Tulogo</h2>
+        <nav class="nav" id="nav">
+            <h2 class="nav_logo">ISPI 4038</h2>
 
             <ul class="nav_links">
-                <li class="nav_item">
-                    <a href="#" class="nav_link">Institucional</a>
-                </li>
-                <li class="nav_item">
-                    <a href="#" class="nav_link">Cotizaciones</a>
-                </li>
-                <li class="nav_item">
-                    <a href="#" class="nav_link">Noticias</a>
-                </li>
-                <li class="nav_item">
-                    <a href="#" class="nav_link">Contacto</a>
-                </li>
+                <li class="nav_item"><a href="#" class="nav_link">Institucional</a></li>
+                <li class="nav_item"><a href="#" class="nav_link">Cotizaciones</a></li>
+                <li class="nav_item"><a href="#" class="nav_link">Noticias</a></li>
+                <li class="nav_item"><a href="#" class="nav_link">Contacto</a></li>
             </ul>
+
             <a href="#nav" class="nav_hamburguesa">
-                <img src="" class="nav_icono" alt="">
+                <i class="nav_icono fas fa-bars fa-2x"></i>
             </a>
             <a href="#" class="nav_cerrar">
-                <img src="" class="nav_icono" alt="">
+                <i class="nav_icono fas fa-times fa-2x"></i>
             </a>
-
         </nav>
-    </header>
-    <main>
-        <div id="contenedor">
-            <div id="banner">
-                <div id="logo"></div>
-                <div id="titulo">
-                    <h1>ISPI 4038</h1>
-                    <h3>Instituto Superior Particular Incorporado N°4038 Juan Pablo II</h3>
-                </div>
-                <div id="boton_info"><button>Más información</button></div>
+
+        <div id="banner">
+            <div id="titulo">
+                <h1>ISPI 4038</h1>
+                <h3>Instituto Superior Particular Incorporado N°4038<br>Juan Pablo II</h3>
             </div>
-            <div id="informacion"></div>
-            <div id="cotizacion_noticias"></div>
-            <div id="contacto"></div>
+            <div id="boton_info">
+                <button class="cta-button">Más información</button>
+            </div>
         </div>
+    </header>
+
+    <main>
+        <!-- Secciones adicionales -->
     </main>
+
     <footer>
-        <div>
-            <h2>copyright</h2>
+        <div class="footer-content">
+            <p>© 2025 ISPI 4038 - Todos los derechos reservados</p>
         </div>
     </footer>
-</body>
 
+    <script src="js/index.js"></script>
+</body>
 </html>
