--- a/index.html
+++ b/index.html
@@ -1,55 +1,62 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ISPI 4038 - Juan Pablo II</title>
+    <title>ISPI</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="js/index.js"></script>
 </head>
 
 <body>
     <header class="cabecera">
-        <nav class="nav" id="nav">
-            <h2 class="nav_logo">ISPI 4038</h2>
+        <nav class="nav_contenedor" id="nav">
+            <h2 class="nav_logo"><img src="img/logo-.png" alt=""></h2>
 
             <ul class="nav_links">
-                <li class="nav_item"><a href="#" class="nav_link">Institucional</a></li>
-                <li class="nav_item"><a href="#" class="nav_link">Cotizaciones</a></li>
-                <li class="nav_item"><a href="#" class="nav_link">Noticias</a></li>
-                <li class="nav_item"><a href="#" class="nav_link">Contacto</a></li>
+                <li class="nav_item">
+                    <a href="#" class="nav_link">Institucional</a>
+                </li>
+                <li class="nav_item">
+                    <a href="#" class="nav_link">Cotizaciones</a>
+                </li>
+                <li class="nav_item">
+                    <a href="#" class="nav_link">Noticias</a>
+                </li>
+                <li class="nav_item">
+                    <a href="#" class="nav_link">Contacto</a>
+                </li>
             </ul>
-
             <a href="#nav" class="nav_hamburguesa">
-                <i class="nav_icono fas fa-bars fa-2x"></i>
+                <img src="" class="nav_icono" alt="">
             </a>
             <a href="#" class="nav_cerrar">
-                <i class="nav_icono fas fa-times fa-2x"></i>
+                <img src="" class="nav_icono" alt="">
             </a>
+
         </nav>
-
-        <div id="banner">
-            <div id="titulo">
-                <h1>ISPI 4038</h1>
-                <h3>Instituto Superior Particular Incorporado N°4038<br>Juan Pablo II</h3>
-            </div>
-            <div id="boton_info">
-                <button class="cta-button">Más información</button>
-            </div>
-        </div>
     </header>
-
     <main>
-        <!-- Secciones adicionales -->
+        <div id="contenedor">
+            <div id="banner">
+                <div id="logo"></div>
+                <div id="titulo">
+                    <h1>ISPI 4038</h1>
+                    <h3>Instituto Superior Particular Incorporado N°4038 Juan Pablo II</h3>
+                </div>
+                <div id="boton_info"><button>Más información</button></div>
+            </div>
+            <div id="informacion"></div>
+            <div id="cotizacion_noticias"></div>
+            <div id="contacto"></div>
+        </div>
     </main>
-
     <footer>
-        <div class="footer-content">
-            <p>© 2025 ISPI 4038 - Todos los derechos reservados</p>
+        <div>
+            <h2>copyright</h2>
         </div>
     </footer>
-
-    <script src="js/index.js"></script>
 </body>
+
 </html>
