--- a/index.html
+++ b/index.html
@@ -48,9 +48,30 @@
                 <div id="boton_info"><button>Más información</button></div>
             </div>
             <div id="informacion"></div>
-            <div id="cotizacion_noticias"></div>
+            <div id="cotizacion_noticias">
+                <div id="noticias">
+                    <h2 id="titulo_noticias">Ultimas noticias</h2>
+                    <div class="noticia">
+                        <div class="fecha_noticia">7 de Agosto</div>
+                        <div class="tiulo_noticia">Nuevo acuerdo comercial entre Argentina y Brasil</div>
+                    </div>
+                    <div class="noticia">
+                        <div class="fecha_noticia">7 de Agosto</div>
+                        <div class="tiulo_noticia">Nuevo acuerdo comercial entre Argentina y Brasil</div>
+                    </div>
+                    <div class="noticia">
+                        <div class="fecha_noticia">7 de Agosto</div>
+                        <div class="tiulo_noticia">Nuevo acuerdo comercial entre Argentina y Brasil</div>
+                    </div>
+                    <div class="noticia">
+                        <div class="fecha_noticia">7 de Agosto</div>
+                        <div class="tiulo_noticia">Nuevo acuerdo comercial entre Argentina y Brasil</div>
+                    </div>
+                </div>
+            </div>
             <div id="contacto"></div>
         </div>
+
     </main>
     <footer>
         <div>
