--- a/index.html
+++ b/index.html
@@ -48,30 +48,30 @@
                 <div id="boton_info"><button>Más información</button></div>
             </div>
             <div id="informacion"></div>
-            <div id="cotizacion_noticias">
-                <div id="noticias">
-                    <h2 id="titulo_noticias">Ultimas noticias</h2>
-                    <div class="noticia">
-                        <div class="fecha_noticia">7 de Agosto</div>
-                        <div class="tiulo_noticia">Nuevo acuerdo comercial entre Argentina y Brasil</div>
-                    </div>
-                    <div class="noticia">
-                        <div class="fecha_noticia">7 de Agosto</div>
-                        <div class="tiulo_noticia">Nuevo acuerdo comercial entre Argentina y Brasil</div>
-                    </div>
-                    <div class="noticia">
-                        <div class="fecha_noticia">7 de Agosto</div>
-                        <div class="tiulo_noticia">Nuevo acuerdo comercial entre Argentina y Brasil</div>
-                    </div>
-                    <div class="noticia">
-                        <div class="fecha_noticia">7 de Agosto</div>
-                        <div class="tiulo_noticia">Nuevo acuerdo comercial entre Argentina y Brasil</div>
-                    </div>
+            <div id="cotizacion_en_vivo">
+                <div class="cotizacion">
+                    <div class="par">USD/ARS</div>
+                    <div class="valor">95.2.60</div>
+                    <div class="variacion">+0.80%</div>
+                </div>
+                <div class="cotizacion">
+                    <div class="par">EUR/ARS</div>
+                    <div class="valor">1014.22</div>
+                    <div class="variacion">+1.45%</div>
+                </div>
+                <div class="cotizacion">
+                    <div class="par">BTC/USD</div>
+                    <div class="valor">62,991.20</div>
+                    <div class="variacion">-192.14</div>
+                </div>
+                <div class="cotizacion">
+                    <div class="par">ETH/USD</div>
+                    <div class="valor">9,209.56</div>
+                    <div class="variacion">-46.21</div>
                 </div>
             </div>
             <div id="contacto"></div>
         </div>
-
     </main>
     <footer>
         <div>
