--- a/index.html
+++ b/index.html
@@ -70,6 +70,25 @@
                     <div class="variacion">-46.21</div>
                 </div>
             </div>
+            <div id="noticias">
+                    <h2 id="titulo_noticias">Ultimas noticias</h2>
+                    <div class="noticia">
+                        <div class="fecha_noticia">7 de Agosto</div>
+                        <div class="tiulo_noticia">Nuevo acuerdo comercial entre Argentina y Brasil</div>
+                    </div>
+                    <div class="noticia">
+                        <div class="fecha_noticia">7 de Agosto</div>
+                        <div class="tiulo_noticia">Nuevo acuerdo comercial entre Argentina y Brasil</div>
+                    </div>
+                    <div class="noticia">
+                        <div class="fecha_noticia">7 de Agosto</div>
+                        <div class="tiulo_noticia">Nuevo acuerdo comercial entre Argentina y Brasil</div>
+                    </div>
+                    <div class="noticia">
+                        <div class="fecha_noticia">7 de Agosto</div>
+                        <div class="tiulo_noticia">Nuevo acuerdo comercial entre Argentina y Brasil</div>
+                    </div>
+                </div>
             <div id="contacto"></div>
         </div>
     </main>
