--- a/index.html
+++ b/index.html
@@ -12,30 +12,43 @@
 <body>
     <header class="cabecera">
         <nav class="nav_contenedor" id="nav">
-            <h2 class="nav_logo"><img src="img/logo-.png" alt=""></h2>
-
-            <ul class="nav_links">
-                <li class="nav_item">
-                    <a href="#" class="nav_link">Institucional</a>
-                </li>
-                <li class="nav_item">
-                    <a href="#" class="nav_link">Cotizaciones</a>
-                </li>
-                <li class="nav_item">
-                    <a href="#" class="nav_link">Noticias</a>
-                </li>
-                <li class="nav_item">
-                    <a href="#" class="nav_link">Contacto</a>
-                </li>
-            </ul>
-            <a href="#nav" class="nav_hamburguesa">
-                <img src="" class="nav_icono" alt="">
-            </a>
-            <a href="#" class="nav_cerrar">
-                <img src="" class="nav_icono" alt="">
-            </a>
-
+            <div id="contenedor_menu">
+                <div id="logo_ispi"><img src="img/logo.png" alt="" class="nav_logo"></div>
+                <div id="contenedor_items">
+                    <ul class="nav_links">
+                        <li class="nav_item">
+                            <a href="#" class="nav_link">Institucional</a>
+                        </li>
+                        <li class="nav_item">
+                            <a href="#" class="nav_link">Cotizaciones</a>
+                        </li>
+                        <li class="nav_item">
+                            <a href="#" class="nav_link">Noticias</a>
+                        </li>
+                        <li class="nav_item">
+                            <a href="#" class="nav_link">Contacto</a>
+                        </li>
+                    </ul>
+                    <a href="#nav" class="nav_hamburguesa">
+                        <img src="" class="nav_icono" alt="">
+                    </a>
+                    <a href="#" class="nav_cerrar">
+                        <img src="" class="nav_icono" alt="">
+                    </a>
+                </div>
+            </div>
         </nav>
+
+        <div id="banner">
+            <div id="logo"></div>
+            <div id="titulo">
+                <h1>ISPI 4038</h1>
+                <h3>Instituto Superior Particular Incorporado N°4038 Juan Pablo II</h3>
+            </div>
+            <div id="boton_info">
+                <button>Más información</button>
+            </div>
+        </div>
     </header>
     <main>
         <div id="contenedor">
