--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div id="boton_info"><button>Más información</button></div>
             </div>
-            <div id="informacion"></div>
+            <div id="informacion">informacion</div>
             <div id="cotizacion_en_vivo">
                 <div class="cotizacion">
                     <div class="par">USD/ARS</div>
