centrado de cosas del banner

--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
             </div>
         </nav>
 
-        <div id="banner">
-            <div id="logo"></div>
-            <div id="titulo">
+        <div id="banner" >
+            <div id="titulo" class="div1">
                 <h1>ISPI 4038</h1>
+            </div>
+            <div class="div2">
                 <h3>Instituto Superior Particular Incorporado N°4038 Juan Pablo II</h3>
             </div>
-            <div id="boton_info">
+            <div id="boton_info" class="div3">
                 <button>Más información</button>
             </div>
         </div>
