agregado de enlaces}

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                             <a href="#" class="nav_link">Institucional</a>
                         </li>
                         <li class="nav_item">
-                            <a href="#" class="nav_link">Cotizaciones</a>
+                            <a href="#cotizacion_en_vivo" class="nav_link">Cotizaciones</a>
                         </li>
                         <li class="nav_item">
-                            <a href="#" class="nav_link">Noticias</a>
+                            <a href="#noticias" class="nav_link">Noticias</a>
                         </li>
                         <li class="nav_item">
-                            <a href="#" class="nav_link">Contacto</a>
+                            <a href="#contacto" class="nav_link">Contacto</a>
                         </li>
                     </ul>
                     <a href="#nav" class="nav_hamburguesa">
@@ -40,6 +40,9 @@
         </nav>
 
         <div id="banner" >
+            <div class="div1">
+                <h1>ISPI 4038</h1>
+            </div>
             <div class="div2">
                 <h3>Instituto Superior Particular Incorporado N°4038 Juan Pablo II</h3>
             </div>
