contenedor noticias cotizacion
contenedor

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div id="contenedor">
             <div id="informacion">informacion
                 <div id="cotizacion_en_vivo">
+                    <h2 id="titulo_cotizacion">Cotización en vivo</h2>
                     <div class="cotizacion">
                         <div class="par">USD/ARS</div>
                         <div class="valor">95.2.60</div>
