--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     </main>
     <footer>
         <div>
-
             <h2>copyright</h2>
+            <h3>Since 2018</h3>
         </div>
     </footer>
 </body>
