--- a/index.html
+++ b/index.html
@@ -51,28 +51,31 @@
     </header>
     <main>
         <div id="contenedor">
-            <div id="informacion">informacion
+            <div id="informacion"><h2>informacion</h2>
                 <div id="cotizacion_en_vivo">
                     <h2 id="titulo_cotizacion">Cotización en vivo</h2>
-                    <div class="cotizacion">
-                        <div class="par">USD/ARS</div>
-                        <div class="valor">95.2.60</div>
-                        <div class="variacion">+0.80%</div>
-                    </div>
-                    <div class="cotizacion">
-                        <div class="par">EUR/ARS</div>
-                        <div class="valor">1014.22</div>
-                        <div class="variacion">+1.45%</div>
-                    </div>
-                    <div class="cotizacion">
-                        <div class="par">BTC/USD</div>
-                        <div class="valor">62,991.20</div>
-                        <div class="variacion">-192.14</div>
-                    </div>
-                    <div class="cotizacion">
-                        <div class="par">ETH/USD</div>
-                        <div class="valor">9,209.56</div>
-                        <div class="variacion">-46.21</div>
+
+                    <div class="cotizaciones">
+                        <div class="cotizacion">
+                            <div class="par">USD/ARS</div>
+                            <div class="valor">95.2.60</div>
+                            <div class="variacion">+0.80%</div>
+                        </div>
+                        <div class="cotizacion">
+                            <div class="par">EUR/ARS</div>
+                            <div class="valor">1014.22</div>
+                            <div class="variacion">+1.45%</div>
+                        </div>
+                        <div class="cotizacion">
+                            <div class="par">BTC/USD</div>
+                            <div class="valor">62,991.20</div>
+                            <div class="variacion">-192.14</div>
+                        </div>
+                        <div class="cotizacion">
+                            <div class="par">ETH/USD</div>
+                            <div class="valor">9,209.56</div>
+                            <div class="variacion">-46.21</div>
+                        </div>
                     </div>
                 </div>
                 <div id="noticias">
@@ -114,11 +117,8 @@
                                 <a href="https://www.google.com/maps/search/?api=1&query=Vidaurreta,+Rold%C3%A1n,+Santa+Fe"
                                     target="_blank" rel="noopener">Vidaurreta, Roldán, Santa Fe</a>
 
-
                             </div>
                         </div>
-
-
                     </div>
                 </div>
     </main>
