--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </header>
     <main>
         <div id="contenedor">
-            <div id="informacion"><h2>informacion</h2>
+            <div id="informacion"><h2>informacion del instituto</h2>
                 <div id="cotizacion_en_vivo">
                     <h2 id="titulo_cotizacion">Cotización en vivo</h2>
 
