--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
                 <div id="contenedor_items">
                     <ul class="nav_links">
                         <li class="nav_item">
-                            <a href="#" class="nav_link">Institucional</a>
+                            <a href="#" class="nav_link">INSTITUCIONAL</a>
                         </li>
                         <li class="nav_item">
-                            <a href="#cotizacion_en_vivo" class="nav_link">Cotizaciones</a>
+                            <a href="#cotizacion_en_vivo" class="nav_link">COTIZACIONES</a>
                         </li>
                         <li class="nav_item">
-                            <a href="#noticias" class="nav_link">Noticias</a>
+                            <a href="#noticias" class="nav_link">NOTICIAS</a>
                         </li>
                         <li class="nav_item">
-                            <a href="#contacto" class="nav_link">Contacto</a>
+                            <a href="#contacto" class="nav_link">CONTACTO</a>
                         </li>
                     </ul>
                     <a href="#nav" class="nav_hamburguesa">
@@ -39,16 +39,14 @@
         </nav>
 
         <div id="banner">
-            <div class="div1">
-                <h1>ISPI 4038</h1>
-            </div>
+            <br>
+            <br>
+            <br>
             <div class="div2">
                 <h3>Instituto Superior Particular Incorporado N°4038 Juan Pablo II</h3>
             </div>
             <div id="boton_info" class="div3">
                 <button onclick="location.href='#contacto'">Más información</button>
-
-                <!-- <a href="#contacto" class="button">Más información</a> -->
             </div>
         </div>
     </header>
