--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             <br>
             <br>
             <br>
-            <div class="div2">
+            <div class="div2" style="margin-left: 20px;">
                 <h3>Instituto Superior Particular Incorporado N°4038 Juan Pablo II</h3>
             </div>
-            <div id="boton_info" class="div3">
+            <div id="boton_info" class="div3" style="margin-left: 200px;">
                 <button onclick="location.href='#contacto'">Más información</button>
             </div>
         </div>
