--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ISPI</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/index.js"></script>
+    <!-- <script src="js/index.js"></script> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -91,27 +92,8 @@
             <div id="cotizacion_en_vivo">
                 <h2 id="titulo_cotizacion">Cotización en vivo</h2>
 
-                <div class="cotizaciones">
-                    <div class="cotizacion">
-                        <div class="par">USD/ARS</div>
-                        <div class="valor">95.2.60</div>
-                        <div class="variacion">+0.80%</div>
-                    </div>
-                    <div class="cotizacion">
-                        <div class="par">EUR/ARS</div>
-                        <div class="valor">1014.22</div>
-                        <div class="variacion">+1.45%</div>
-                    </div>
-                    <div class="cotizacion">
-                        <div class="par">BTC/USD</div>
-                        <div class="valor">62,991.20</div>
-                        <div class="variacion">-192.14</div>
-                    </div>
-                    <div class="cotizacion">
-                        <div class="par">ETH/USD</div>
-                        <div class="valor">9,209.56</div>
-                        <div class="variacion">-46.21</div>
-                    </div>
+                <div id="cotizaciones">
+                      
                 </div>
             </div>
             <div id="noticias">
@@ -165,6 +147,7 @@
             <h3>Since 2023 con los mejores ingresantes</h3>
         </div>
     </footer>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
