conexion ultima actualizacion
se conecto a la api de btc y se agrego el span de ultima actualización y cotizaciones responsivas

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <br>
             <br>
             <br>
-            <div class="div2" style="margin-left: 20px;">
+            <div class="div2">
                 <h3>Instituto Superior Particular Incorporado N°4038 Juan Pablo II</h3>
             </div>
-            <div id="boton_info" class="div3" style="margin-left: 200px;">
+            <div id="boton_info" class="div3">
                 <button onclick="location.href='#contacto'">Más información</button>
             </div>
         </div>
@@ -90,11 +90,17 @@
 
         <div id="informacion">
             <div id="cotizacion_en_vivo">
-                <h2 id="titulo_cotizacion">Cotización en vivo</h2>
+                <div class="cabecera-cotizacion">
+                  <h2 id="titulo_cotizacion">Cotización en vivo</h2>
+                  <span id="ultima-actualizacion" class="espacio-actualizacion"></span>
+                </div>
+
+
 
                 <div id="cotizaciones">
-                      
+
                 </div>
+                
             </div>
             <div id="noticias">
                 <h2 id="titulo_noticias">Ultimas noticias</h2>
