--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>ISPI</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
 
 </head>
@@ -32,7 +34,7 @@
                     </li>
                 </ul>
 
-            <a href="#nav" class="nav__hamburguesa">
+            <a href="#nav" class="nav_hamburguesa">
                 <img src="img/menu.svg" class="nav__icon">
             </a>
 
@@ -49,10 +51,11 @@
         <br>
         <br>
         <br>
-        <div class="div2" style="margin-left: 20px;">
-            <h3>Instituto Superior Particular Incorporado N°4038 Juan Pablo II</h3>
+        <div class="div2" style="text-align: center; color: rgba(255, 255, 255, 0.904); text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); font-size: 22px;" >
+            <h3>Instituto Superior Particular Incorporado N°4038</h3>
+            <h3>Juan Pablo II</h3>
         </div>
-        <div id="boton_info" class="div3" style="margin-left: 200px; margin-top: 15px;" >
+        <div id="boton_info" class="div3" style="text-align: center; margin-top: 15px; size: 40px;"  >
             <button onclick="location.href='#contacto'">Más información</button>
         </div>
     </div>
