corregido edgardo y lucas

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>ISPI</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -29,10 +31,15 @@
                         <a href="#contacto" class="nav_link">CONTACTO</a>
                     </li>
                 </ul>
-                <a href="#nav" class="nav_hamburguesa">
+
+                <a href="#nav" class="nav__hamburguesa">
+                    <img src="img/menu.svg" class="nav__icon">
                 </a>
+
                 <a href="#" class="nav_cerrar">
+                    <img src="img/close.svg" class="nav__icon">
                 </a>
+
             </div>
         </div>
     </nav>
@@ -41,10 +48,11 @@
         <br>
         <br>
         <br>
+        <br>
         <div class="div2" style="margin-left: 20px;">
             <h3>Instituto Superior Particular Incorporado N°4038 Juan Pablo II</h3>
         </div>
-        <div id="boton_info" class="div3" style="margin-left: 200px;">
+        <div id="boton_info" class="div3" style="margin-left: 200px; margin-top: 15px;" >
             <button onclick="location.href='#contacto'">Más información</button>
         </div>
     </div>
