contenedor cotizaciones en vivo

--- a/index.html
+++ b/index.html
@@ -102,17 +102,7 @@
 
         <div id="informacion">
             <div id="cotizacion_en_vivo">
-                <div class="cabecera-cotizacion">
-                    <h2 id="titulo_cotizacion">Cotización en vivo</h2>
-                    <span id="ultima-actualizacion" class="espacio-actualizacion"></span>
-                </div>
-
-
-
-                <div id="cotizaciones">
-
-                </div>
-
+                <!-- <h2 id="titulo_cotizacion">Cotización en vivo</h2> -->
             </div>
             <div id="noticias">
                 <h2 id="titulo_noticias">Ultimas noticias</h2>
