--- a/index.html
+++ b/index.html
@@ -105,25 +105,43 @@
                 <!-- <h2 id="titulo_cotizacion">Cotización en vivo</h2> -->
             </div>
             <div id="noticias">
-                <h2 id="titulo_noticias">Ultimas noticias</h2>
-                <div class="noticia">
-                    <div class="fecha_noticia">7 de Agosto</div>
-                    <div class="tiulo_noticia">Nuevo acuerdo comercial entre Argentina y Brasil</div>
+            <br>
+            <br>
+            <h2 id="titulo_noticias">Ultimas noticias</h2>
+            <div class="carrusel_noticia">
+                <div class="noticia popup" 
+                data-titulo="Nos vemos en las colectividades" 
+                data-texto="El 20 de Septiembre pueden encontrarnos en nuestro stand en el encuentro de colectividades" 
+                onclick="popu(this)">
+                    <div class="fecha_noticia">20 de Agosto</div>
+                    <img src="img/colectividades.png" alt="Imagen noticia" class="img_noticia">
+                    <div class="titulo_noticia">Se vienen las colectividades</div>
                 </div>
-                <div class="noticia">
-                    <div class="fecha_noticia">7 de Agosto</div>
-                    <div class="tiulo_noticia">Nuevo acuerdo comercial entre Argentina y Brasil</div>
+                <div class="noticia popup" 
+                data-titulo="Comienza el nuevo cuatrimestre" 
+                data-texto="Estamos felices de dar comienzo un nuevo cuatrimestre" 
+                onclick="popu(this)">
+                    <div class="fecha_noticia">4 de Agosto</div>
+                    <img src="img/cuatrimestre.jpeg" alt="Imagen noticia" class="img_noticia">
+                    <div class="titulo_noticia">Nuevo cuatrimestre</div>
                 </div>
-                <div class="noticia">
-                    <div class="fecha_noticia">7 de Agosto</div>
-                    <div class="tiulo_noticia">Nuevo acuerdo comercial entre Argentina y Brasil</div>
+                <div class="noticia" data-titulo="Nuevo inicio de clases" data-texto="¡Este 2025 arrancamos con todo!" 
+                    onclick="popu(this)">
+                <div class="fecha_noticia">30 de Marzo</div>
+                <img src="img/inicio.png" alt="Imagen noticia" class="img_noticia">
+                <div class="titulo_noticia">Arrancan las clases</div>
                 </div>
-                <div class="noticia">
-                    <div class="fecha_noticia">7 de Agosto</div>
-                    <div class="tiulo_noticia">Nuevo acuerdo comercial entre Argentina y Brasil</div>
-                </div>
+                
+            </div>
+            <div id="modal" class="modal">
+                <div class="modal-content">
+                <span class="close" onclick="cerrarModal()">&times;</span>
+                <h2 id="modal-titulo"></h2>
+                <p id="modal-texto"></p>
             </div>
         </div>
+        </div>
+
         <section id="contacto">
         <div class="contacto-flex">
       
