--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </section>
         </div>
 
-
+        <section id="seccion_cotizacion_noticia" >
         <div id="informacion">
             <div id="cotizacion_en_vivo">
                 <!-- <h2 id="titulo_cotizacion">Cotización en vivo</h2> -->
@@ -149,7 +149,8 @@
                 <p id="modal-texto"></p>
             </div>
         </div>
-        
+
+        </section>
 
 
         <section id="contacto">
