Agregado de noticia de la jornada

--- a/index.html
+++ b/index.html
@@ -119,6 +119,15 @@
             <h2 id="titulo_noticias">Ultimas noticias</h2>
             <div class="carrusel_noticia">
                 <div class="noticia popup" 
+                data-titulo="Jornada de software 2025"
+                data-texto="El 15 de Septiembre nos vemos en el sum de Roldan.
+                Gracias por asistir." 
+                onclick="popu(this)">
+                    <div class="fecha_noticia">28 de Agosto</div>
+                    <img src="img/jornada de software.png" alt="Imagen noticia" class="img_noticia">
+                    <div class="titulo_noticia">Nueva jornada de software</div>
+                </div>
+                <div class="noticia popup" 
                 data-titulo="Nos vemos en las colectividades" 
                 data-texto="El 20 de Septiembre pueden encontrarnos en nuestro stand en el encuentro de colectividades" 
                 onclick="popu(this)">
