--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                 <div class="noticia popup" 
                 data-titulo="Jornada de software 2025"
                 data-texto="El 15 de Septiembre nos vemos en el sum de Roldan.
-                Gracias por asistir." 
+                Gracias por asistir."
+                data-link="https://www.instagram.com/p/DN0ejy0QFb4/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" 
                 onclick="popu(this)">
                     <div class="fecha_noticia">28 de Agosto</div>
                     <img src="img/jornada de software.png" alt="Imagen noticia" class="img_noticia">
@@ -144,7 +145,7 @@
                     <div class="titulo_noticia">Nuevo cuatrimestre</div>
                 </div>
                 <div class="noticia" data-titulo="Nuevo inicio de clases" data-texto="¡Este 2025 arrancamos con todo!" 
-                    onclick="popu(this)">
+                data-link="https://www.misitio.com/noticia/inicio-clases" onclick="popu(this)">
                 <div class="fecha_noticia">30 de Marzo</div>
                 <img src="img/inicio.png" alt="Imagen noticia" class="img_noticia">
                 <div class="titulo_noticia">Arrancan las clases</div>
@@ -156,6 +157,8 @@
                 <span class="close" onclick="cerrarModal()">&times;</span>
                 <h2 id="modal-titulo"></h2>
                 <p id="modal-texto"></p>
+                <a id="modal-link" href="#" target="_blank">
+                <button>Ver noticia completa</button>
             </div>
         </div>
 
