agregado de links

--- a/index.html
+++ b/index.html
@@ -136,14 +136,15 @@
                 </div>
                 <div class="noticia popup" 
                 data-titulo="Comienza el nuevo cuatrimestre" 
-                data-texto="Estamos felices de dar comienzo un nuevo cuatrimestre" 
+                data-texto="Estamos felices de dar comienzo un nuevo cuatrimestre"
+                data-link="https://www.instagram.com/p/DM8TeJHAv-4/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" 
                 onclick="popu(this)">
                     <div class="fecha_noticia">4 de Agosto</div>
                     <img src="img/cuatrimestre.jpeg" alt="Imagen noticia" class="img_noticia">
                     <div class="titulo_noticia">Nuevo cuatrimestre</div>
                 </div>
                 <div class="noticia" data-titulo="Nuevo inicio de clases" data-texto="¡Este 2025 arrancamos con todo!" 
-                data-link="https://www.misitio.com/noticia/inicio-clases" onclick="popu(this)">
+                data-link="https://www.instagram.com/p/DHoQBJBuSKx/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" onclick="popu(this)">
                 <div class="fecha_noticia">30 de Marzo</div>
                 <img src="img/inicio.png" alt="Imagen noticia" class="img_noticia">
                 <div class="titulo_noticia">Arrancan las clases</div>
