--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -158,7 +157,7 @@
                 <h2 id="modal-titulo"></h2>
                 <p id="modal-texto"></p>
                 <a id="modal-link" href="#" target="_blank">
-                <button>Ver noticia completa</button>
+                <button id="boton_noticia">Ver noticia completa</button>
             </div>
         </div>
 
