--- a/index.html
+++ b/index.html
@@ -76,11 +76,7 @@
                         <h1><span class="toggle" id="botonInstitucional"
                                 onclick="mostrarInformacionInstitucional()">+</span></h1>
                         <p id="infoInstitucional" style="display:none;">
-                            Cuenta con docentes que brindan atención personalizada y apoyo constante a los estudiantes.
-                            <br>
-                            Su metodología combina ejercicios prácticos, resolución de problemas y proyectos <br>
-                            colaborativos, permitiendo a los alumnos desarrollar habilidades sólidas en distintos <br>
-                            lenguajes y técnicas de programación desde los primeros niveles.
+                            Cuenta con docentes que brindan atención personalizada y apoyo constante a los estudiantes. Su metodología combina ejercicios prácticos, resolución de problemas y proyectos colaborativos, permitiendo a los alumnos desarrollar habilidades sólidas en distintos lenguajes y técnicas de programación desde los primeros niveles.
                         </p>
                     </div>
 
@@ -92,12 +88,7 @@
                         <h1><span class="toggle" id="botonAcademica" onclick="mostrarInformacionAcademica()">+</span>
                         </h1>
                         <p id="infoAcademica" style="display:none;">
-                            El instituto ofrece formación en Python, HTML, CSS y JavaScript, enfocándose <br>
-                            tanto en el desarrollo web como en aplicaciones prácticas. Además, se enseña <br>
-                            programación orientada a objetos, lo que permite a los estudiantes crear programas <br>
-                            estructurados y escalables, preparando a los alumnos para enfrentar proyectos profesionales
-                            <br>
-                            reales y con alta salida laboral.
+                            El instituto ofrece formación en Python, HTML, CSS y JavaScript, enfocándose tanto en el desarrollo web como en aplicaciones prácticas. Además, se enseña  programación orientada a objetos, lo que permite a los estudiantes crear programas estructurados y escalables, preparando a los alumnos para enfrentar proyectos profesionales reales y con alta salida laboral.
                         </p>
                     </div>
                 </div>
