arregle los links para celular y quedo facha, para computadoras quedo facha tambien 🐷

--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
                         </li>
                     </ul>
 
-                    <a href="#nav" class="nav_hamburguesa">
+                    <button id="abrir_menu" class="nav_hamburguesa">
                         <img src="img/menu.svg" class="nav__icon">
-                    </a>
+                    </button>
 
-                    <a href="#" class="nav_cerrar">
+                    <button id="cerrar_menu" class="nav_cerrar">
                         <img src="img/close.svg" class="nav__icon">
-                    </a>
+                    </button>
+
 
                 </div>
             </div>
@@ -111,17 +112,6 @@
                 <div id="cotizacion_en_vivo">
                 </div>
                 <div id="noticias">
-                    <div id="modal" class="modal">
-                        <div class="modal-content">
-                            <span class="close" onclick="cerrarModal()">&times;</span>
-                            <h2 id="modal-titulo"></h2>
-                            <hr>
-                            <p id="modal-texto"></p>
-                            
-                            <button id="boton_noticia" onclick="abrirEnlace()">Ver noticia completa</button>
-
-                        </div>
-                    </div>
                     <br>
                     <br>
                     <h2 id="titulo_noticias">Ultimas noticias</h2>
@@ -158,9 +148,17 @@
                             <div class="titulo_noticia">Arrancan las clases</div>
 
                         </div>
+                    </div>
 
-
-
+                    <div id="modal" class="modal">
+                        <div class="modal-content">
+                            <span class="close" onclick="cerrarModal()">&times;</span>
+                            <h2 id="modal-titulo"></h2>
+                            <hr>
+                            <p id="modal-texto"></p>
+                            <a id="modal-link" href="#" target="_blank">
+                                <button id="boton_noticia">Ver noticia completa</button>
+                        </div>
                     </div>
 
         </section>
