arreglo de link cotizacin en celular y links en computadora allineados mas a la derecha

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                             <a href="#seccion_institucional" class="nav_link">INSTITUCIONAL</a>
                         </li>
                         <li class="nav_item">
-                            <a href="#seccion_cotizacion_noticias" class="nav_link">COTIZACIONES</a>
+                            <a href="#cotizacion_en_vivo" class="nav_link">COTIZACIONES</a>
                         </li>
                         <li class="nav_item">
-                            <a href="#seccion_cotizacion_noticias" class="nav_link">NOTICIAS</a>
+                            <a href="#noticias" class="nav_link">NOTICIAS</a>
                         </li>
                         <li class="nav_item">
                             <a href="#contacto" class="nav_link">CONTACTO</a>
@@ -118,7 +118,7 @@
                     <br>
                     <br>
                     <h2 id="titulo_noticias">Ultimas noticias</h2>
-                    <div class="carrusel_noticia">
+                    <div class="carrusel_noticia" id="carrusel_noticia">
                         <div class="noticia popup" data-titulo="Jornada de software 2025" data-texto="El 15 de Septiembre nos vemos en el sum de Roldan.
                 Gracias por asistir."
                             data-link="https://www.instagram.com/p/DN0ejy0QFb4/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
