pequeño bud arreglado

--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
     <footer>
     <div>
     <h2>Equipo programación II y PP II</h2>
-    <p class="footer-nombres">Lucas &bull; Emanuel &bull; Nacho &bull; Edgardo &bull; Victoria &bull; Rodrigo
-    &bull; Milagros</p>
+    <p class="footer-nombres">Lucas Paladini &bull; Emanuel Monella &bull; Ignacio Fleita &bull; Edgardo Soto &bull; Victoria Juarez &bull; Rodrigo Bravo
+    &bull; Milagros Gonzalez</p>
     <p class="footer-copyright">&copy; ISPI 4038 Juan Pablo II. Todos los derechos reservados.</p>
     </div>
     </footer>
