--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </div>
                     <br>
                     <br>
-                    <h2 id="titulo_noticias">Ultimas noticias</h2>
+                    <h2 id="titulo_noticias">Últimas noticias</h2>
                     <div class="carrusel_noticia" id="carrusel_noticia">
                         <div class="noticia popup" data-titulo="Jornada de software 2025" data-texto="El 15 de Septiembre nos vemos en el sum de Roldan.
                 Gracias por asistir."
